Update founding team details

--- a/index.html
+++ b/index.html
@@ -515,14 +515,14 @@
               class="h-24 w-24 rounded-full object-cover border-2 border-blue-100 shadow-sm lazy-image" />
           </div>
           <h3 class="text-base sm:text-lg font-semibold text-slate-900">
-            A. Ayyappan
+            M. Ayyappan
           </h3>
           <p class="text-xs uppercase tracking-wide text-brand-blue mb-2">
-            Founder &amp; Director
+            Director – Operations &amp; Projects
           </p>
           <p class="text-xs sm:text-sm text-slate-600 mb-3">
-            Leads overall operations, project execution and client relationships for
-            industrial elevator and EOT crane projects.
+            Leads overall operations, key client relationships and project execution for
+            industrial elevator and EOT crane installations, ensuring safe and on-time delivery.
           </p>
           <div class="flex items-center gap-3 text-xs text-slate-500">
             <span class="inline-flex items-center gap-1">
@@ -539,14 +539,14 @@
               class="h-24 w-24 rounded-full object-cover border-2 border-blue-100 shadow-sm lazy-image" />
           </div>
           <h3 class="text-base sm:text-lg font-semibold text-slate-900">
-            S. Prakash
+            Prakash Parmar
           </h3>
           <p class="text-xs uppercase tracking-wide text-brand-blue mb-2">
-            Technical Head &amp; AMC Lead
+            Director – Technical &amp; AMC
           </p>
           <p class="text-xs sm:text-sm text-slate-600 mb-3">
-            Oversees field engineering, commissioning, safety practices and
-            annual maintenance contracts across client sites.
+            Oversees technical strategy, field engineering, commissioning practices and
+            annual maintenance contracts across client sites, with a strong focus on safety and reliability.
           </p>
           <div class="flex items-center gap-3 text-xs text-slate-500">
             <span class="inline-flex items-center gap-1">
@@ -563,14 +563,14 @@
               class="h-24 w-24 rounded-full object-cover border-2 border-blue-100 shadow-sm lazy-image" />
           </div>
           <h3 class="text-base sm:text-lg font-semibold text-slate-900">
-            Core Project Team
+            Vijay Kanjariya
           </h3>
           <p class="text-xs uppercase tracking-wide text-brand-blue mb-2">
-            Project Coordination &amp; Site Support
+            Director – Projects &amp; Site Coordination
           </p>
           <p class="text-xs sm:text-sm text-slate-600 mb-3">
-            Coordinates site activities, documentation and logistics for project
-            execution within planned shutdown windows.
+            Directs project planning, site coordination, documentation and logistics
+            to align on-site activities with plant shutdown windows and client expectations.
           </p>
           <div class="flex items-center gap-3 text-xs text-slate-500">
             <span class="inline-flex items-center gap-1">
