Update core team titles, enlarge photos, add contact form heading

--- a/index.html
+++ b/index.html
@@ -509,13 +509,13 @@
       <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6 fade-section">
         <!-- Member 1 -->
         <article
-          class="bg-slate-50 border border-slate-200 rounded-2xl p-7 flex flex-col items-center text-center shadow-sm transition-all duration-300 hover:-translate-y-2 hover:shadow-xl hover:scale-[1.01] tilt-card">
+          class="bg-slate-50 border border-slate-200 rounded-2xl p-8 flex flex-col items-center text-center shadow-sm transition-all duration-300 hover:-translate-y-2 hover:shadow-xl hover:scale-[1.01] tilt-card">
           <div class="mb-4">
             <img src="assets/images/leader_1.webp" alt="Director - SP Engineering"
-              class="h-24 w-24 rounded-full object-cover border-2 border-blue-100 shadow-sm lazy-image" />
+              class="h-32 w-32 rounded-full object-cover border-2 border-blue-100 shadow-sm lazy-image" />
           </div>
           <h3 class="text-base sm:text-lg font-semibold text-slate-900">
-            M. Ayyappan
+            Mr. M. Ayyappan
           </h3>
           <p class="text-xs uppercase tracking-wide text-brand-blue mb-2">
             Director – Operations &amp; Projects
@@ -533,13 +533,13 @@
 
         <!-- Member 2 -->
         <article
-          class="bg-slate-50 border border-slate-200 rounded-2xl p-7 flex flex-col items-center text-center shadow-sm transition-all duration-300 hover:-translate-y-2 hover:shadow-xl hover:scale-[1.01] tilt-card">
+          class="bg-slate-50 border border-slate-200 rounded-2xl p-8 flex flex-col items-center text-center shadow-sm transition-all duration-300 hover:-translate-y-2 hover:shadow-xl hover:scale-[1.01] tilt-card">
           <div class="mb-4">
             <img src="assets/images/leader_2.webp" alt="Technical Head - SP Engineering"
-              class="h-24 w-24 rounded-full object-cover border-2 border-blue-100 shadow-sm lazy-image" />
+              class="h-32 w-32 rounded-full object-cover border-2 border-blue-100 shadow-sm lazy-image" />
           </div>
           <h3 class="text-base sm:text-lg font-semibold text-slate-900">
-            Prakash Parmar
+            Mr. Prakash Parmar
           </h3>
           <p class="text-xs uppercase tracking-wide text-brand-blue mb-2">
             Director – Technical &amp; AMC
@@ -557,13 +557,13 @@
 
         <!-- Member 3 -->
         <article
-          class="bg-slate-50 border border-slate-200 rounded-2xl p-7 flex flex-col items-center text-center shadow-sm transition-all duration-300 hover:-translate-y-2 hover:shadow-xl hover:scale-[1.01] tilt-card">
+          class="bg-slate-50 border border-slate-200 rounded-2xl p-8 flex flex-col items-center text-center shadow-sm transition-all duration-300 hover:-translate-y-2 hover:shadow-xl hover:scale-[1.01] tilt-card">
           <div class="mb-4">
             <img src="assets/images/leader_3.webp" alt="Project Coordinator - SP Engineering"
-              class="h-24 w-24 rounded-full object-cover border-2 border-blue-100 shadow-sm lazy-image" />
+              class="h-32 w-32 rounded-full object-cover border-2 border-blue-100 shadow-sm lazy-image" />
           </div>
           <h3 class="text-base sm:text-lg font-semibold text-slate-900">
-            Vijay Kanjariya
+            Mr. Vijay Kanjariya
           </h3>
           <p class="text-xs uppercase tracking-wide text-brand-blue mb-2">
             Director – Projects &amp; Site Coordination
@@ -932,6 +932,13 @@
         <!-- RIGHT: Form -->
         <div
           class="bg-white/10 border border-white/10 rounded-3xl px-6 sm:px-8 py-6 sm:py-8 shadow-2xl shadow-blue-900/40 backdrop-blur fade-section">
+          <h3 class="text-xl sm:text-2xl font-semibold text-white mb-1">
+            Share your project details
+          </h3>
+          <p class="text-sm text-blue-100 mb-4">
+            Fill in the form and our directors will connect with you to understand your industrial elevator,
+            EOT crane or electrical requirements.
+          </p>
           <form id="contactForm" class="space-y-4" novalidate>
             <!-- Row 1: Name -->
             <div>
